# File-Version-Management

./: .gitignore  BUILD.md  CMakeLists.txt  Encryptor.cpp  LICENSE  README.md  Saver  Saver.cpp  a  b  b.cpp  data.chm  file_system.h  log.chm  main  main.cpp  node_manager  node_manager.cpp
docs/: architecture.md
lib/: bs_tree.cpp  command_interpreter.cpp  count_code_line.py  data.chm  dir_scanner.py  encryptor.cpp  file_manager.cpp  file_system  file_system.cpp  log.chm  logger.cpp  node_manager.cpp  number_line.py  saver  saver.cpp  terminal.cpp  version_manager.cpp
lib/include/: bs_tree.h  command_interpreter.h  command_registry.h  encryptor.h  file_manager.h  file_system.h  logger.h  node_manager.h  saver.h  session.h  terminal.h  version_manager.h
lib/include/commands/: cat_command.h  cd_command.h  cdl_command.h  clear_command.h  create_version_command.h  find_command.h  gcv_command.h  help_command.h  ls_command.h  mkdir_command.h  pwd_command.h  rmd_command.h  rmf_command.h  switch_version_command.h  touch_command.h  tree_command.h  update_content_command.h  update_name_command.h  version_command.h  vim_command.h
lib/include/core/: platform.h  result.h  types.h
lib/include/interfaces/: i_command.h  i_file_manager.h  i_logger.h  i_node_manager.h  i_session.h  i_storage.h
lib/src/: bs_tree.cpp  command_base.cpp  command_interpreter.cpp  command_registry.cpp  encryptor.cpp  file_manager.cpp  file_system.cpp  logger.cpp  node_manager.cpp  saver.cpp  session.cpp  terminal.cpp  version_manager.cpp
lib/src/commands/: cat_command.cpp  cd_command.cpp  cdl_command.cpp  clear_command.cpp  create_version_command.cpp  find_command.cpp  gcv_command.cpp  help_command.cpp  ls_command.cpp  mkdir_command.cpp  pwd_command.cpp  rmd_command.cpp  rmf_command.cpp  switch_version_command.cpp  touch_command.cpp  tree_command.cpp  update_content_command.cpp  update_name_command.cpp  version_command.cpp  vim_command.cpp
tests/: CMakeLists.txt
tests/mocks/: mock_logger.h  mock_node_manager.h  mock_storage.h  placeholder.h
tests/unit/: bs_tree_test.cpp  cd_command_test.cpp  commands_test.cpp  encryptor_test.cpp  file_system_test.cpp  session_test.cpp
